--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   sqflite: ^2.2.8+4
+  modal_bottom_sheet: ^2.0.0
+
 
 dev_dependencies:
   flutter_test:
