--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   sqflite: ^2.2.8+4
   modal_bottom_sheet: ^2.0.0
+  intl: ^0.19.0
 
 
 dev_dependencies:
