--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   sqflite: ^2.2.8+4
   modal_bottom_sheet: ^2.0.0
   intl: ^0.19.0
+  flutter_holo_date_picker: ^1.1.3
 
 
 dev_dependencies:
@@ -78,15 +79,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+  fonts:
+    - family: NotoSans
+      fonts:
+        - asset: assets/fonts/NotoSans.ttf
+        
+    - family: NotoSans-Italic
+      fonts:
+        - asset: assets\fonts\NotoSans-Italic.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
